--- a/art.html
+++ b/art.html
@@ -492,6 +492,6 @@ Where in the last <code>findFunc</code> call we just pass 1 as the array size, s
     If you have some ideas on how to shrink the executable even more, email me at <a href="mailto:info.davide99@gmail.com">info.davide99@gmail.com</a>.
 
     <h3>5.3. Special thanks</h3>
-    Obviously, a special thank goes to Dave Plummer. He gave me a great coding adventure to work with and some great tips. Thank you for the effort you put into things.
+    Obviously, a special thank goes to Dave Plummer. He gave me a great coding adventure to work with and some great tips. Thank you for all the effort you put into things.
 </body>
 </html>
