--- a/article.html
+++ b/article.html
@@ -5,7 +5,6 @@
     if (urlParams.has('id')) {
         document.writeln(urlParams.get('id'));
     } else {
-        console.log(window.location.host);
-        //window.location.replace(window.location.host);
+        window.location.replace(window.location.host);
     }
 </script>
