--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>Articles</h1>
 
     <ul>
-        <li>2021/04/18 &diams; <a href="articles/smallest_pe/index.html">Making the smallest Windows application possible</a></li>
+        <li>2021/04/18 &diams; <a href="articles/1">Making the smallest Windows application possible</a></li>
     </ul>
 </body>
 </html>
