--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <head>
     <title>Davide99 - Home</title>
     <meta charset="UTF-8">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@1,500&family=Trykker&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <script type="text/javascript">
         window.addEventListener("load", function(event) {
