--- a/index.html
+++ b/index.html
@@ -4,17 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <script type="text/javascript">
-        window.addEventListener("load", function(event) {
-            if (localStorage.getItem("scroll_position_y") != null) {
-                window.scrollTo(0, localStorage.getItem("scroll_position_y"));
-            }
-
-            window.onscroll = function() {
-                localStorage.setItem("scroll_position_y", window.scrollY);
-            };
-        });
-    </script>
+    <script src="js/position_hack.js"></script>
 </head>
 
 <body>
