--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 </head>
 
 <body>
-    <h1>Articles</h1>
+    <h1>Davide's notes</h1>
 
+    <h2>Contacts</h2><hr>
+    <ul style="list-style-type:none;">
+        <li><b>E-mail</b>: <a href="mailto:dpisano99@gmail.com">dpisano99@gmail.com</a></li>
+        <li><b>Github</b>: <a href="https://github.com/davide99">@davide99</a></li>
+    </ul>
+
+    <h2>Articles</h2><hr>
     <ul>
         <li>2021/04/18 &diams; <a href="articles/1">Making the smallest Windows application possible</a></li>
     </ul>
