--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <h2>Contacts</h2>
     <ul style="list-style-type:none;">
-        <li><b>E-mail</b>: <a href="mailto:dpisano99@gmail.com">dpisano99@gmail.com</a></li>
+        <li><b>E-mail</b>: <a href="mailto:mail@davidesnotes.com">mail@davidesnotes.com</a></li>
         <li><b>Github</b>: <a href="https://github.com/davide99">@davide99</a></li>
     </ul>
 </body>
