Aggiunto articolo a index

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h2>Articles</h2>
     <ul>
         <li>2021/04/18 &diams; <a href="articles/1">Making the smallest Windows application possible</a></li>
+        <li>2021/09/04 &diams; <a href="articles/2">Music recognition AI</a></li>
     </ul>
 
     <h2>Contacts</h2>
