Prima versione BIOS

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <li>2021/09/04 &diams; <a href="articles/2">Music recognition AI</a></li>
     </ul>
 
+    <h2>Shorts</h2>
+    <ul>
+        <li>2021/12/04 &diams; (<b>Draft</b>) <a href="shorts/1">Unbricking a BIOS-bricked motherboard</a></li>
+    </ul>
+
     <h2>Contacts</h2>
     <ul style="list-style-type:none;">
         <li><b>E-mail</b>: <a href="mailto:mail@davidesnotes.com">mail@davidesnotes.com</a></li>
