--- a/shorts/1/index.html
+++ b/shorts/1/index.html
@@ -36,10 +36,10 @@
     Has that ever been in a situation when flashing a new BIOS goes wrong and your motherboard become a useless brick? We've all been there, so keep on reading.
     
     <h2>How to flash a new BIOS without the motherboard even POSTing</h2>
-    <i>Note:</i> This tutorial is meant for AMI BIOSes. Said that, you can google the procedure for your particolar BIOS.
+    <i>Note:</i> This tutorial is meant for AMI BIOSes. Said that, you can google the procedure for your particular BIOS.
     <br>
 
-    <img src="img/bios_floppy.WEBP" loading="lazy" width="2971px" height="3926px" style="width:30%;float:right" alt="Reading on floppy">
+    <img src="img/bios_floppy.WEBP" loading="lazy" width="891px" height="1178px" style="width:30%;float:right" alt="Reading on floppy">
 
     <ol>
         <li>Download a BIOS for your motherboard from the vendor website</li>
