--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <h2>Shorts</h2>
     <ul>
-        <li>2021/12/04 &diams; (<b>Draft</b>) <a href="shorts/1">Unbricking a BIOS-bricked motherboard</a></li>
+        <li>2021/12/13 &diams; <a href="shorts/1">Unbricking a BIOS-bricked motherboard</a></li>
     </ul>
 
     <h2>Contacts</h2>
