--- a/countdown/index.html
+++ b/countdown/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <title>Countdown</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -51,7 +52,12 @@
         const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
         const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-        countdownDiv.innerHTML = `${months} mesi, ${days} giorni, ${hours} ore, ${minutes} minuti e ${seconds} secondi`;
+        countdownDiv.innerHTML = `${months} mesi, ${days} giorni, ${hours} ore, ${minutes} minuti e ${seconds} `;
+        if (seconds === 1) {
+            countdownDiv.innerHTML += "secondo";
+        } else {
+            countdownDiv.innerHTML += "secondi";
+        }
     }
 
     countdown();
