--- a/countdown/index.html
+++ b/countdown/index.html
@@ -60,15 +60,18 @@
 
         let stringa = "";
         if (months > 0)
-            stringa += `${months} ` + (months === 1 ? 'mese' : 'mesi');
+            stringa += `${months} ` + (months === 1 ? 'mese' : 'mesi') + ', ';
         if (days > 0)
-            stringa += `, ${days} ` + (days === 1 ? 'giorno' : 'giorni');
+            stringa += `${days} ` + (days === 1 ? 'giorno' : 'giorni') + ', ';
         if (hours > 0)
-            stringa += `, ${hours} ` + (hours === 1 ? 'ora' : 'ore');
+            stringa += `${hours} ` + (hours === 1 ? 'ora' : 'ore') + ', ';
         if (minutes > 0)
-            stringa += `, ${minutes} ` + (minutes === 1 ? 'minuto' : 'minuti');
+            stringa += `${minutes} ` + (minutes === 1 ? 'minuto' : 'minuti') + ', ';
         if (seconds > 0)
-            stringa += ` e ${seconds} ` + (seconds === 1 ? 'secondo' : 'secondi');
+            stringa += `${seconds} ` + (seconds === 1 ? 'secondo' : 'secondi');
+
+        if (stringa.slice(-1) === " ")
+            stringa = stringa.substring(0, stringa.length - 2);
 
         countdownDiv.innerHTML = stringa;
     }
