--- a/countdown/index.html
+++ b/countdown/index.html
@@ -39,14 +39,13 @@
 </head>
 <body>
 <div id="container">
-    <div class="content">I felipes scenderanno tra:</div>
+    <div class="content">Si va a Firenze tra:</div>
     <div class="content" id="countdown">AA</div>
-    <div class="content-small" style="padding-top: 2em; display: none;" id="welcome">AA</div>
 </div>
 
 <script>
     const countdownDiv = document.getElementById("countdown");
-    const endDate = new Date(2023, 6, 31);
+    const endDate = new Date(2024, 6, 15);
     
     function countdown() {
         const now = new Date();
@@ -78,46 +77,6 @@
 
     countdown();
     setInterval(countdown, 1000);
-
-    function getDistance(lat1, lon1, lat2, lon2) {
-        const earthRadius = 6371; // raggio medio della Terra in chilometri
-
-        const dLat = toRadians(lat2 - lat1);
-        const dLon = toRadians(lon2 - lon1);
-
-        const a =
-            Math.sin(dLat / 2) * Math.sin(dLat / 2) +
-            Math.cos(toRadians(lat1)) * Math.cos(toRadians(lat2)) *
-            Math.sin(dLon / 2) * Math.sin(dLon / 2);
-
-        const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-        const distance = earthRadius * c;
-
-        return distance;
-    }
-
-    function toRadians(degrees) {
-        return degrees * (Math.PI / 180);
-    }
-
-    const welcomeDiv = document.getElementById("welcome");
-    if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(
-            (position) => {
-                const lat = position.coords.latitude;
-                const lon = position.coords.longitude;
-
-                const kmFromPadova = getDistance(lat, lon, 45.4064, 11.8758);
-                welcomeDiv.style.display = "block";
-
-                if (kmFromPadova < 200) {
-                    welcomeDiv.innerHTML = "Immagino tu sia Gloria o Felipe, meeeeeena e scinniti";
-                } else {
-                    welcomeDiv.innerHTML = "Dite a Gloria e a Felipe ca tocca se movine";
-                }
-            }
-        );
-    }
 </script>
 </body>
 </html>
